--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
   "presets": [
-    "env"
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-nullish-coalescing-operator"
   ]
 }
