--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-money",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "Money format plugin",
   "main": "index.js",
   "author": "apexjcl",
@@ -15,9 +15,11 @@
     "build": "babel src/index.js --out-file index.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-preset-env": "^1.6.1",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/eslint-parser": "^7.11.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
     "eslint": "^4.10.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
